--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
                         <td><input type="radio" value="opinion" name="selection15" /></td>
                     </tr>
                 </table>
+                <br>
+                <input type="button" onclick="myFunction()" value="Mostrar Resultados">
+                <br> <br>
+                <input type="text" id="resultados" size="100">
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
