--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                     </tr>
                 </table>
                 <br>
-                <input type="button" onclick="myFunction()" value="Mostrar Resultados">
+                <input type="button" onclick="displayRadioValue()" value="Mostrar Resultados" />
                 <br> <br>
-                <input type="text" id="resultados" size="100">
+                <textarea id="resultados" readonly></textarea>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
