--- a/index.html
+++ b/index.html
@@ -56,92 +56,92 @@
                     <tr>
                         <td>1</td>
                         <td class="declaration">“Yo soy una mala persona”.</td>
-                        <td><input type="radio" value="hecho" name="selection1" /></td>
-                        <td><input type="radio" value="opinion" name="selection1" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta1" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta1" /></td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td class="declaration">“Claudia me dijo que a ella no le gustó lo que dije”.</td>
-                        <td><input type="radio" value="hecho" name="selection2" /></td>
-                        <td><input type="radio" value="opinion" name="selection2" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta2" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta2" /></td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td class="declaration">“Nada me sale bien”.</td>
-                        <td><input type="radio" value="hecho" name="selection3" /></td>
-                        <td><input type="radio" value="opinion" name="selection3" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta3" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta3" /></td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td class="declaration">“Esto será un desastre”.</td>
-                        <td><input type="radio" value="hecho" name="selection4" /></td>
-                        <td><input type="radio" value="opinion" name="selection4" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta4" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta4" /></td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td class="declaration">“No soy atractiv@ como ell@s”.</td>
-                        <td><input type="radio" value="hecho" name="selection5" /></td>
-                        <td><input type="radio" value="opinion" name="selection5" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta5" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta5" /></td>
                     </tr>
                     <tr>
                         <td>6</td>
                         <td class="declaration">“Fallé la prueba”.</td>
-                        <td><input type="radio" value="hecho" name="selection6" /></td>
-                        <td><input type="radio" value="opinion" name="selection6" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta6" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta6" /></td>
                     </tr>
                     <tr>
                         <td>7</td>
                         <td class="declaration">“Estoy en sobrepeso”.</td>
-                        <td><input type="radio" value="hecho" name="selection7" /></td>
-                        <td><input type="radio" value="opinion" name="selection7" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta7" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta7" /></td>
                     </tr>
                     <tr>
                         <td>8</td>
                         <td class="declaration">“El me gritó”.</td>
-                        <td><input type="radio" value="hecho" name="selection8" /></td>
-                        <td><input type="radio" value="opinion" name="selection8" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta8" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta8" /></td>
                     </tr>
                     <tr>
                         <td>9</td>
                         <td class="declaration">“Soy egoísta”.</td>
-                        <td><input type="radio" value="hecho" name="selection9" /></td>
-                        <td><input type="radio" value="opinion" name="selection9" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta9" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta9" /></td>
                     </tr>
                     <tr>
                         <td>10</td>
                         <td class="declaration">“Hay algo mal conmigo”.</td>
-                        <td><input type="radio" value="hecho" name="selection10" /></td>
-                        <td><input type="radio" value="opinion" name="selection10" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta10" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta10" /></td>
                     </tr>
                     <tr>
                         <td>11</td>
                         <td class="declaration">“Soy perezos@”.</td>
-                        <td><input type="radio" value="hecho" name="selection11" /></td>
-                        <td><input type="radio" value="opinion" name="selection11" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta11" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta11" /></td>
                     </tr>
                     <tr>
                         <td>12</td>
                         <td class="declaration">"No le presté dinero a mi amig@ cuando pidió”.</td>
-                        <td><input type="radio" value="hecho" name="selection12" /></td>
-                        <td><input type="radio" value="opinion" name="selection12" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta12" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta12" /></td>
                     </tr>
                     <tr>
                         <td>13</td>
                         <td class="declaration">“Mis pies son muy grandes”.</td>
-                        <td><input type="radio" value="hecho" name="selection13" /></td>
-                        <td><input type="radio" value="opinion" name="selection13" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta13" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta13" /></td>
                     </tr>
                     <tr>
                         <td>14</td>
                         <td class="declaration">“Soy fe@”.</td>
-                        <td><input type="radio" value="hecho" name="selection14" /></td>
-                        <td><input type="radio" value="opinion" name="selection14" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta14" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta14" /></td>
                     </tr>
                     <tr>
                         <td>15</td>
                         <td class="declaration">“Nadie me amará nunca”.</td>
-                        <td><input type="radio" value="hecho" name="selection15" /></td>
-                        <td><input type="radio" value="opinion" name="selection15" /></td>
+                        <td><input type="radio" value="hecho" name="pregunta15" /></td>
+                        <td><input type="radio" value="opinion" name="pregunta15" /></td>
                     </tr>
                 </table>
                 <br>
